--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>TaylorAanenson</title>
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <h1>Taylor Aanenson</h1>
